kubernetes/dns/example/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: etcd-https
  namespace: dns
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  tls:
  - secretName: etcd-bas-tls
  rules:
  - host: etcd.bas
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: etcd-browser
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: etcd-http
  namespace: dns
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "false"
    traefik.ingress.kubernetes.io/router.entrypoints: "web"
    traefik.ingress.kubernetes.io/router.middlewares: "traefik-http-redirect-to-https@kubernetescrd"
spec:
  rules:
  - host: etcd.bas
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: etcd-browser
            port:
              number: 80
